GIF/Image updates

--- a/Tiles.html
+++ b/Tiles.html
@@ -12,7 +12,7 @@
         TILES GAME:  
     </h1>
         <br>
-        <img src = "C:\Users\jackr\Desktop\website\chromatic-square.gif" class  = "imgpos"></img>
+        <img src = "C:\Users\jackr\Documents\GitHub\CookieWeb\chromatic-square.gif" class  = "imgpos"></img>
     </div>
 <ul>
     <div> 
