--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
     </table>
 </div>
-<img src="C:\Users\jackr\Desktop\website\hunie.jpg" align="right" class="intoyou" id="a"></img>
+<img src="C:\Users\jackr\Documents\GitHub\CookieWeb\hunie.jpg" align="right" class="intoyou" id="a"></img>
 </body>
 
 </html>
