--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
     </table>
 </div>
-<img src="C:\Users\jackr\Documents\GitHub\CookieWeb\hunie.jpg" align="right" class="intoyou" id="a"></img>
+<img src="![chromatic-square](https://user-images.githubusercontent.com/80206848/110251059-b1abcb00-7f4c-11eb-994d-3983656c6993.gif)" align="right" class="intoyou" id="a"></img>
 </body>
 
 </html>
