--- a/Tiles.html
+++ b/Tiles.html
@@ -12,7 +12,7 @@
         TILES GAME:  
     </h1>
         <br>
-        <img src = "C:\Users\jackr\Documents\GitHub\CookieWeb\chromatic-square.gif" class  = "imgpos"></img>
+        <img src = "https://github.com/Jrres/WebStartup/blob/main/chromatic-square.gif?raw=true --allow-file-access-from-files" class  = "imgpos"></img>
     </div>
 <ul>
     <div> 
@@ -27,4 +27,5 @@
     <noscript>You need to enable javascript to view this site.</noscript>
     </body>
 </html>
+
 
