--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1 class ="title" font-family:"inherit">Gamin</h2>  
     </header>
     <div class =container>
-    <img src ="C:\Users\jackr\Desktop\website\circuit_board.jpg"  class = "inline"></img>
+    <img src ="http://github.com - ![chromatic-square](https://user-images.githubusercontent.com/80206848/110251186-5fb77500-7f4d-11eb-892e-c0f7c5fb3961.gif)"  class = "inline"></img>
     <div class ="inside">
     <table class ="data">
         <h3 class="top" align= "center" >Leader Board</h2>  
@@ -60,7 +60,7 @@
         </div>
     </table>
 </div>
-<img src="![chromatic-square](https://user-images.githubusercontent.com/80206848/110251059-b1abcb00-7f4c-11eb-994d-3983656c6993.gif)" align="right" class="intoyou" id="a"></img>
+<img src="![chromatic-square](https://user-images.githubusercontent.com/80206848/110251059-b1abcb00-7f4c-11eb-994d-3983656c6993.gif" align="right" class="intoyou" id="a"></img>
 </body>
 
 </html>
