img updates (fixed - converted to issue gits)

--- a/Tiles.html
+++ b/Tiles.html
@@ -12,7 +12,7 @@
         TILES GAME:  
     </h1>
         <br>
-        <img src = "https://github.com/Jrres/WebStartup/blob/main/chromatic-square.gif?raw=true --allow-file-access-from-files" class  = "imgpos"></img>
+        <img src = "https://github.com - ![cd3671c8e7b8f0ffaf8a471c41ccfc58](https://user-images.githubusercontent.com/80206848/110251396-3a773680-7f4e-11eb-86e5-5c693a0862be.gif)" class  = "imgpos"></img>
     </div>
 <ul>
     <div> 
