--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1 class ="title" font-family:"inherit">Gamin</h2>  
     </header>
     <div class =container>
-    <img src ="http://github.com - ![circuit_board](https://user-images.githubusercontent.com/80206848/110251194-6c3bcd80-7f4d-11eb-9290-ffb74fd2f4e6.jpg)"  class = "inline"></img>
+    <img src ="https://github.com/Jrres/WebStartup/blob/main/circuit_board.jpg?raw=true --allow-file-access-from-files"  class = "inline"></img>
     <div class ="inside">
     <table class ="data">
         <h3 class="top" align= "center" >Leader Board</h2>  
@@ -60,7 +60,7 @@
         </div>
     </table>
 </div>
-<img src="http://github.com - ![hunie](https://user-images.githubusercontent.com/80206848/110251370-24697600-7f4e-11eb-9dc0-36ad3ff535b9.jpg)" align="right" class="intoyou" id="a"></img>
+<img src="https://github.com/Jrres/WebStartup/blob/main/hunie.jpg?raw=true --allow-file-access-from-files" align="right" class="intoyou" id="a"></img>
 </body>
 
 </html>
