--- a/Tiles.html
+++ b/Tiles.html
@@ -2,6 +2,7 @@
 <html lang= "en" dir="ltr">
 <head>
     <meta charset ="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> TILES </title>
     <li class="pos"><a class = "bar" href="index.html">Home</a ></li> 
     <link rel = "stylesheet" href ="main.css">
