--- a/Tiles.html
+++ b/Tiles.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> TILES </title>
     <li class="pos"><a class = "bar" href="index.html">Home</a ></li> 
-    <link rel = "stylesheet" href ="main.css">
+    <link rel = "stylesheet" href ="Main.css">
 </head> 
 <body class = "dark-theme">
     <div>
