--- a/Tiles.html
+++ b/Tiles.html
@@ -4,7 +4,7 @@
     <meta charset ="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> TILES </title>
-    <li class="pos"><a class = "bar" href="index.html">Home</a ></li> 
+    <div class="pos"><a class = "list" href="index.html" >Home</a ></div> 
     <link rel = "stylesheet" href ="Main.css">
 </head> 
 <body class = "dark-theme">
@@ -16,12 +16,10 @@
         <img src = "https://github.com/Jrres/WebStartup/blob/main/sqr.gif?raw=true --allow-file-access-from-files" class  = "imgpos"></img>
     </div>
 <ul>
-    <div> 
-        <p id= "msg" > Rules : </p>
-    <li class = "list" > Move by pressing the up/down and side arrow keys.</li>
+        <p id= "msg" class = "underline" > Rules : </p>
+    <li class = "list"  > Move by pressing the up/down and side arrow keys.</li>
     <li class = "list" > Travel to each square until the whole board is green. </li>
     <li class = "list" > &nbsp; Exit the maze!</li>
-    </div>
     <button class = "btn" id="btn">Dark</button>
 </ul>
     <script src="app.js"></script>
