--- a/Tiles.html
+++ b/Tiles.html
@@ -3,13 +3,27 @@
 <head>
     <meta charset ="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> TILES </title>
-    <div class="pos"><a class = "list" href="index.html" >Home</a ></div> 
     <link rel = "stylesheet" href ="Main.css">
+    <link rel="stylesheet" href="Homepage.css">
 </head> 
+<header>       
+    <nav id ="list">
+        <ul>
+            <li><a class = "bar" href="index.html">Home</a ></li> 
+
+            <li><a class = "bar"  href="Tiles.html">Tiles</a></li>
+
+            <li><a  class = "bar" href="Weight rate.html">Weight Scanner</a></li>
+
+            <li><a  class = "bar" href="Music Player.html">Music Player</a></li>
+
+            <li><a  class = "bar" href="Trading Scanner.html">Trading Logger</a></li>
+        </ul>    
+    </nav>    
+</header>
 <body class = "dark-theme">
     <div>
-    <h1 class = "center">
+    <h1 class = "leftpos" >
         TILES GAME:  
     </h1>
         <br>
