--- a/Trading Scanner.html
+++ b/Trading Scanner.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" media="screen and (max-width: 1280px)" href="css/small_resolution.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
+<body class = "red">
     <header>
             
     <nav id ="list">
@@ -25,7 +25,6 @@
         <h1 class ="title" font-family:"inherit">Gamin</h2>  
     </header>
     <div class =container>
-    <img src ="https://github.com/Jrres/WebStartup/blob/main/circuit_board.jpg?raw=true --allow-file-access-from-files"  class = "inline"></img>
     <div class ="inside">
     <table class ="data">
         <h3 class="top" align= "center" >Leader Board</h2>  
@@ -62,7 +61,7 @@
         </div>
     </table>
 </div>
-<img src="https://github.com/Jrres/WebStartup/blob/main/hunie.jpg?raw=true --allow-file-access-from-files" align="right" class="intoyou" id="a"></img>
+
 </body>
 
 </html>
