--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             <li><a  class = "bar" href="Music Player.html">Music Player</a></li>
 
             <li><a  class = "bar" href="Trading Scanner.html">Trading Logger</a></li>
+            
+            <li><a class = "bar" href="Dog BR.html">Dog Sim</a ></li>
         </ul>    
     </nav>    
         <h1 class ="title" id = "stroke">Gamin</h1>  
@@ -108,6 +110,13 @@
         <li class = "list">3 fold page design</li>
         <li class = "list">uniformity in each page</li>  
     </div>
+</div>
+<div class = "column leftside">
+    <div class ="card">
+        <div class="fakeimg" style="height:600px;">
+            <h2 class="height">test</h2>
+</div>
+</div>
 </div>
 
 <script src="about.js"></script>
