Fixed the tabbing issue. Had to do with nav selector. Fixed all pages, added more styles, added more imgs. Next updates will be implementing tabs on weight scanner, Adding weight loss tips, adding special workout split, and workout streams, lastly will add the weight scanner app

--- a/Trading Scanner.html
+++ b/Trading Scanner.html
@@ -8,25 +8,25 @@
 </head>
 <body class = "red">
     <nav class ="navbar">
-
         <img class="img"></img>
 
         <a   href="index.html">Home</a>
 
         <a  href="Tiles.html">Games</a>
 
-        <li class="dropdown">
-            <a href="javascript:void(0)" class="dropbtn">Apps</a>
-            <div class="dropdown-content">
+        <a href="Dog BR.html">Dog Sim</a> 
+
+        <div class="dropdown">
+            <button class="dropbtn">Apps
+            <div class="dropdown-content" id ="Mydropdown">
                 <a  href="Weight Rate.html">Weight Scanner</a>
 
                 <a  href="Music Player.html">Music Player</a>
 
                 <a  href="Trading Scanner.html">Trading Logger</a>
             </div>
-        </li>
-        
-        <a href="Dog BR.html">Dog Sim</a> 
+        </div>
+
 
         <div class="search-container">
 
