--- a/Tiles.html
+++ b/Tiles.html
@@ -5,28 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href ="Main.css">
     <link rel="stylesheet" href="Homepage.css">
+    <style>
+        #gameScreen{
+            border: 1px solid white;
+            height: 100vh;
+            width: 50vw;
+            margin-left:25%;
+            position: relative;
+        }
+    </style>
 </head>     
-    <nav class ="navbar">
+<nav class ="navbar">
 
-        <img class="img"></img>
+    <img class="img"></img>
 
-        <a   href="index.html">Home</a>
+    <a   href="index.html">Home</a>
 
-        <a  href="Tiles.html">Games</a>
+    <a  href="Tiles.html">Games</a>
 
-        <li class="dropdown">
-            <a href="javascript:void(0)" class="dropbtn">Apps</a>
-            <div class="dropdown-content">
-                <a  href="Weight Rate.html">Weight Scanner</a>
+    <a href="Dog BR.html">Dog Sim</a> 
 
-                <a  href="Music Player.html">Music Player</a>
+    <div class="dropdown">
+        <button class="dropbtn">Apps
+        <div class="dropdown-content" id ="Mydropdown">
+            <a  href="Weight Rate.html">Weight Scanner</a>
 
-                <a  href="Trading Scanner.html">Trading Logger</a>
-            </div>
-        </li>
-        
-        <a href="Dog BR.html">Dog Sim</a> 
+            <a  href="Music Player.html">Music Player</a>
 
+            <a  href="Trading Scanner.html">Trading Logger</a>
+        </div>
+    </div>
         <div class="search-container">
 
         <input type="text" placeholder="Search.." name="search">
@@ -40,7 +48,9 @@
     <h1 class = "leftpos" >
         TILES GAME:  
     </h1>
-        <br>
+
+    <canvas id="GameScreen"  ></canvas>
+
         <img src = "https://github.com/Jrres/WebStartup/blob/main/sqr.gif?raw=true --allow-file-access-from-files" class  = "imgpos"></img>
     </div>
 <ul>
@@ -50,7 +60,8 @@
     <li class = "list" >  Exit the maze!</li>
     <button class = "btn" id="btn">Dark</button>
 </ul>
-    <script src="app.js"></script>
+    <script src="app.js" ></script>
+    <script src="index.js"></script>
     <noscript>You need to enable javascript to view this site.</noscript>
     </body>
 </html>
