--- a/Tiles.html
+++ b/Tiles.html
@@ -8,10 +8,6 @@
     <style>
         #gameScreen{
             border: 1px solid white;
-            height: 100vh;
-            width: 50vw;
-            margin-left:25%;
-            position: relative;
         }
     </style>
 </head>     
@@ -49,7 +45,7 @@
         TILES GAME:  
     </h1>
 
-    <canvas id="GameScreen"  ></canvas>
+    <canvas id="GameScreen" width=800 height=600  ></canvas>
 
         <img src = "https://github.com/Jrres/WebStartup/blob/main/sqr.gif?raw=true --allow-file-access-from-files" class  = "imgpos"></img>
     </div>
@@ -60,8 +56,8 @@
     <li class = "list" >  Exit the maze!</li>
     <button class = "btn" id="btn">Dark</button>
 </ul>
-    <script src="app.js" ></script>
     <script src="index.js"></script>
+    <script src="app.js" ></script>
     <noscript>You need to enable javascript to view this site.</noscript>
     </body>
 </html>
