--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
                     <input type="image" src="drop.png" name="this" class="aboutme"/>
                 <div class="hidden" id="hidden">
                 <p1 hidden>Insta:</p1>
-                <input type="image" src="Insta.jpg" name="Insta" width="50" height="50" hidden></input>
+                <input type="image" src="Insta.jpg" name="Insta" width="50" height="50" ></input>
                 <br><br>
                 <p2 hidden>Git:</p2>
-                <input type="image" src="GitHub.png" name="Github" width="50" height="50" hidden></input>
+                <input type="image" src="GitHub.png" name="Github" width="50" height="50" ></input>
                 <br><br>
-                <p hidden>
+                <p>
                     *I'm a full time CS student dev new to web design and data structures seeking to improve my skills in all languages<br><br>
                 </p>
-                    <p hidden>
+                    <p>
                     *Languages learned: Java, C#, JS, CSS, HTML, PHP, SQL, Arduino, python<br><br>
                     </p>
-                    <p hidden>
-                    *Current projects: Tiles + Dog(Battle royale - unity) Game, bodybuilding app, trade viewer(w/t scanner),and dynamic keyboard game using real piano <br>
+                    <p>
+                    *Current projects: TD endless runner game + Dog(Battle royale - unity) Game, bodybuilding app, trade viewer(w/t scanner),and dynamic keyboard game using real piano <br>
                     </p>
             </div>
         </div>
