--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
         <div class = "column leftside">
             <div class ="card">
                 <div class="fakeimg" style="height:30px;">
-                    <h2 class="height">About</h2>
+                    <h2 class="liningrightside">About</h2>
                 </div>
                     <img src="https://github.com/Jrres/WebStartup/blob/main/hunie.jpg?raw=true --allow-file-access-from-files" align="right" class="intoyou" id="a">
                 </div>
                 <div class ="card">
-                    <input type="image" src="drop.png" name="this" class="aboutme"/>
+                    <input type="image" src="drop.png" name="this" class="aboutme" >
                 <div class="hidden" id="hidden">
                 <p1 hidden>Insta:</p1>
                 <input type="image" src="Insta.jpg" name="Insta" width="50" height="50" ></input>
@@ -62,7 +62,7 @@
                     *Languages learned: Java, C#, JS, CSS, HTML, PHP, SQL, Arduino, python<br><br>
                     </p>
                     <p>
-                    *Current projects: TD endless runner game + Dog(Battle royale - unity) Game, bodybuilding app, trade viewer(w/t scanner),and dynamic keyboard game using real piano <br>
+                    *Current projects: TD endless runner + Dog(Battle royale - unity) Games<br>, bodybuilding app, trade viewer(w/t scanner)<br>,and dynamic keyboard game using real piano <br>
                     </p>
             </div>
         </div>
@@ -168,7 +168,7 @@
 <script src="about.js"></script>
 <script>
 'use strict'
-const nav = document.querySelector("dropbtn");
+const nav = document.querySelector("    ");
 nav.addEventListener('click', function() {
     var getnav = document.querySelector("navbar");
     
